Bug 127534 - TextRange.getPropertyValues runs into RuntimeException when getting all properties form PropertySetinfo
Summary: TextRange.getPropertyValues runs into RuntimeException when getting all prope...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-13 09:00 UTC by Thomas Viehmann
Modified: 2019-09-19 23:09 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Reproducing Unittest (832 bytes, patch)
2019-09-13 09:01 UTC, Thomas Viehmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Viehmann 2019-09-13 09:00:03 UTC
Description:
In Writer, when querying TextRange.getPropertyValues for all properties, I'm getting a runtime error.
The property in question that seems to cause it appears to be ParaChapterNumberingLevel, which is defined as Non-Nullable but appears to be unset, triggering the exception in svl/source/items/itemprop.cxx
I tried to trace this a bit with git blame, but it seems to that way be since the "initial import".

Thanks to Björn for helping debug this! If I understand correctly, he says the property might be a "fossile" that is not actually used(?).

Steps to Reproduce:
I added a unit test reproducing this in diff I will attach.

Actual Results:
Runtime error.

Expected Results:
Test passes.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Thomas Viehmann 2019-09-13 09:01:37 UTC
Created attachment 154152 [details]
Reproducing Unittest
Comment 2 Dieter 2019-09-16 06:33:34 UTC
Thomas, thank you for reporting the bug. I don't know how to reproduce the bug. Please provide a clearer set of step-by-step instructions on how to reproduce the problem.
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the steps are provided.
Comment 3 Thomas Viehmann 2019-09-16 06:41:06 UTC
Basically you'd run the unit-test script after you applied the patch.

This bug is patched in

https://gerrit.libreoffice.org/#/c/78865/

(Not sure what more detail than the unit test you would expect.)
Comment 4 QA Administrators 2019-09-17 02:48:55 UTC Comment hidden (obsolete)
Comment 5 Thomas Viehmann 2019-09-17 10:15:37 UTC
This has been fixed in master.
Comment 6 Commit Notification 2019-09-19 23:09:51 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4f969db3bc8b488a06aa2e61946f6346a5f86fed

tdf#127534: brown paperbag commit, use the right bug ID this time

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.