sw: Mark uno property ParaChapterNumberingLevel as MAYBEVOID

tdf#127534 TextRange.getPropertyValues runs into RuntimeException when
getting all properties form PropertySetinfo

We suspect that the property might be completely unused / useless.
However, removing it might be BC breaking for "buggy" uses of
the property, so this is a lower-risk fix.

Björn helped with great advice, thank you! All errors in the patch
are my own, though.

Change-Id: Ie80b61003de2b8516e458c800531aac951ebc148